--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -14,11 +14,10 @@
   height: 78vh;
   color: #fff;
   font-family: "Poppins", sans-serif;
+  text-align: center;
 }
 
 .home h1 {
-  margin-left: 25%;
-  margin-right: 20%;
   padding-top: 100px;
   padding-bottom: 20px;
 }
@@ -41,6 +40,7 @@
   font-size: 16px;
   border: #ff8c38;
   cursor: pointer;
+  margin-bottom: 20px;
 }
 
 .home a {
