--- a/src/components/account/signup/signup.css
+++ b/src/components/account/signup/signup.css
@@ -39,7 +39,7 @@
 
 .btn {
     padding: 3px;
-    background-color: antiquewhite;
+    background-color: #f7eee3;
     border: .5px solid black;
     border-radius: 5px;
 }
