--- a/src/components/account/EditeProfile/edite.css
+++ b/src/components/account/EditeProfile/edite.css
@@ -11,20 +11,32 @@
 }
 
 .img-con img{
-    border-radius: 100%;
-    max-width: 100px;
+    width: 10rem;
+    height: 10rem;
+    object-fit: cover;
+    border-radius: 50%;
 }
 
-.img-con input {
+.img-con input[type="file"] {
+    display: none;   
+}
+
+.custom-file {
+    background-color: #f7eee3;
+    padding: 2px;
+    width: 5rem;
+    border: 1px solid black;
+    border-radius: 10px;
+    font-size: 12px;
     position: absolute;
-    top: 70%;   
+    top: 90%;
 }
 
 .name-con input{
     display: block;
     padding: 2px;
     border-radius: 10px;
-    background-color: antiquewhite;
+    background-color: #f7eee3;
     border: 1px solid black;
     margin-bottom: 20px;
 }
@@ -33,9 +45,16 @@
     padding: 2px;
     border-radius: 5px;
     border: 1px solid black;
-    background-color: antiquewhite;
+    background-color: #f7eee3;
 }
 
 .save-btn:disabled {
 background-color: rgb(236, 236, 236);
+}
+
+.custom-file sub {
+    left: 100%;
+    position: absolute;
+    margin-left: 10px;
+    margin-top: 5px;
 }
