--- a/src/components/account/profile/Profile.css
+++ b/src/components/account/profile/Profile.css
@@ -1,7 +1,7 @@
 .editeProfile-btn {
     border-radius: 5px;
     padding: 2px;
-    background-color: antiquewhite;
+    background-color: #f7eee3;
     position: relative;
     margin: 0px 10px 15px;
     border: .5px solid black;
@@ -22,13 +22,26 @@
 }
 
 .profile-img {
-    border-radius: 100%;
-    max-width: 100px;
+    border-radius: 50%;
     box-shadow: -2px -1px 10px 1px black;
     margin: 20px;
+    height: 10rem;
+    width: 10rem;
+    object-fit: cover;
 }
 
 .profile-name {
     font-size: 18px;
     margin-bottom: 15px;
+}
+
+.signout-btn {
+    border-radius: 5px;
+    padding: 2px;
+    background-color: #ff0000;
+    position: relative;
+    margin: 0px 10px 15px;
+    border: .5px solid black;
+    width: 4rem;
+    color: #f7eee3;
 }
